# stda

./: .travis.yml  2PA.f90  INFO  Makefile  README.md  apbtrafo.f  block.f  full.f  header.f  intpack.f90  intslvm.f  io.f  libcint.f  linal.f  linear_response.f  main.f  meson.build  meson_options.txt  molden.f  normalize.f  onetri.f  param  param_default  pckao.f  print_nto.f  printvec.f  prmat.f  qc2molden.sh  readbasa.f  readbasmold.f  readl.f  readxtb.f  rlist.f  sfstda.f  sosor.f  srpapack.f  stda-rw.f  stda-rw_dual.f  stda.f  stdacommon.f90  (+5 more)
.github/workflows/: fortran-build.yml
g2molden/: Makefile  main.f  stringmod.f90
g_spec/: Makefile  g_spec.f
subprojects/: libcint.wrap
tests/: compare.py  run_tests.sh  water_sto3g.molden  wavelength
tests/expected_results/: 2PA_TEST1.txt  2PA_TEST2.txt  2PA_TEST3.txt  BETA_TEST1.txt  BETA_TEST2.txt  BETA_TEST3.txt
