# This file is part of stda.
#
# Copyright (C) 2019 Sebastian Ehlert
# Copyright (C) 2024 Marc de Wergifosse

# Modified by P. Beaujean

option(
  'openmp', 
  type: 'boolean', 
  value: true,
  description: 'use OpenMP parallelisation'
)

option(
  'la_backend', 
  type: 'combo', 
  value: 'mkl', 
  choices: ['mkl', 'openblas', 'netlib', 'custom'],
  description : 'linear algebra backend'
)

option(
  'custom_libraries', 
  type: 'array', 
  value: [],
  description: 'libraries to load for custom linear algebra backend'
)

option(
  'static', 
  type: 'boolean', 
  value: false,
  description: 'Produce statically linked executables'
)

option(
  'interface', 
  type: 'combo', 
  value: '32',
  choices: ['32', '64'],
  description: 'integer precision range in bits.'
)
